--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Arial', sans-serif;
     font-size: 16px;
   }
   
@@ -41,18 +41,18 @@ body {
   }
   
   .warn{
-    background-color: rgb(248, 202, 51);
+    background-color: rgb(218, 63, 63);
   }
   
   .late{
-    background-color: rgb(218, 63, 63);
+    background-color: rgb(248, 202, 51);
   }
   
   .highlight {
     /* Add styles to highlight the lane */
-    background-color: peachpuff;
+    background-color: pink;
   }
   
   .done-cards {
-    background-color: green;
+    background-color: blueviolet;
   }
